WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90922
TileCache layers have wrong border debug color
https://bugs.webkit.org/show_bug.cgi?id=90922
Summary
TileCache layers have wrong border debug color
Dean Jackson
Reported
2012-07-10 17:14:23 PDT
<
http://trac.webkit.org/changeset/122152
> made TileCache debugging borders look like other layers. The problem was the update to shouldUseTileCache().
Attachments
Patch
(9.24 KB, patch)
2012-07-10 18:57 PDT
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-07-10 17:15:23 PDT
<
rdar://problem/11845616
>
Dean Jackson
Comment 2
2012-07-10 18:57:14 PDT
Created
attachment 151575
[details]
Patch
Dean Jackson
Comment 3
2012-07-11 12:30:16 PDT
Committed
r122354
: <
http://trac.webkit.org/changeset/122354
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug